Updated swagger w get params
